Gamepad trials removed